--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,119 +1,104 @@
-
-
 <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
+  <div class="navbar-inner">
+    <div class="container">
 
-          <a class="brand" href="/">
-            <!-- <%= image_tag("claco.png", :style => "height:24px") %> -->
-            <%= render 'layouts/logo' %>
-          </a>
-          <div class="nav-collapse">
+      <a class="brand" href="/">
+        <%= render 'layouts/logo' %>
+      </a>
+      <div class="nav-collapse">
 
+      <% if signed_in? %>
 
-          <% if signed_in? %>
-
-            <% unless params[:action] == "bookmarklet" %>
-            <a href="/messages" class="btn top-notch-btn notch-nav">
-              <%= image_tag("profile/message.png", :style => "height:16px;width:16px;margin-top:-3px") %>
-              <% if current_teacher.get_unread_count != 0 %>
-              <div class="notchNum"><%= current_teacher.get_unread_count %></div>
-              <% end %>
-            </a>
-
-
-            <div class="searchWrap">
-              <form method="GET" action="/search" style="margin:0">
-                <input type="text" name="q" class="topSearch" placeholder="Search" value="<%= params[:q] if !params[:q].nil? %>" />
-              </form>
-            </div>
-            <% end %>
-
-
-            <ul class="nav nav-pills pull-right" style="margin-left:0px">
-              <li id="menuopttog" class="dropdown">
-
-                <div id="meoptmenu" data-toggle="dropdown">
-                  <div class="droparr">
-                  </div>
-                </div>
-
-
-                <ul class="dropdown-menu" style="margin-top:2px;margin-right:-6px">
-                  <li>
-                    <a href="/editinfo">Edit Info</a>
-                  </li>
-
-                  <li>
-                    <%= link_to "Logout", destroy_teacher_session_path, :method => :delete %>
-                  </li>
-                  <% if current_teacher.admin %>
-                  <li>
-                    <%= link_to "Admin Panel", "/admin" %>
-                  </li>
-                  <% end %>
-                </ul>
-              </li>
-            </ul>
-
-            <div class="menusplitter"></div>
-
-            <a href="/<%= current_teacher.username %>">
-            <div id="namester">
-                <img src="<%= teacher_thumb_sm(current_teacher) %>" class="myprofpic" />
-                <div class="fname"><%= current_teacher.full_name %></div>
-            </div>
-            </a>
-
-
-          <% else %>
-
-
-
-            <ul class="nav nav-pills pull-right">
-              <li><a href="/" class="publink">Home</a></li>
-              <li><a href="/about" class="publink">About</a></li>
-              <li><a href="/pioneers" class="publink">Pioneers</a></li>
-              <li><a href="/about/team" class="publink">Team Claco</a></li>
-
-              <li class="dropdown">
-
-                <button data-toggle="dropdown" class="btn top-notch-btn notch-login">Sign in</button>
-                <ul class="dropdown-menu noclose">
-                  <%= form_for("teacher", :url => teacher_session_path) do |f| %>
-                    <%= f.text_field :login, :class => "span3 login-focus", :placeholder => "Username / Email" %>
-                    
-                    <%= f.password_field :password, :class => "span3", :placeholder => "Password" %>
-                    
-                    <div style="font-size:10px; float:left; margin-top:8px">
-                      <a href="<%= new_password_path('teacher') %>">Forgot your password?</a>
-                    </div>
-                    <button type="submit" class="btn" style="float:right">Sign in</button>
-                  <% end %>
-
-                  <div style="clear:both"></div>
-<!--
-                  <div class="signup-opt">
-
-                    <div class="or-account">
-                    or sign in with
-                    </div>
-                
-                    <a href="#" class="zocial facebook">Facebook</a>
-                    <a href="#" class="zocial twitter">Twitter</a>
-                  </div>
-                -->
-
-                </ul>
-              </li>
-            </ul>
-
+        <% unless params[:action] == "bookmarklet" %>
+        <a href="/messages" class="btn top-notch-btn notch-nav">
+          <%= image_tag("profile/message.png", :style => "height:16px;width:16px;margin-top:-3px") %>
+          <% if current_teacher.get_unread_count != 0 %>
+          <div class="notchNum"><%= current_teacher.get_unread_count %></div>
           <% end %>
+        </a>
 
 
-          </div><!--/.nav-collapse -->
+        <div class="searchWrap">
+          <form method="GET" action="/search" style="margin:0">
+            <input type="text" name="q" class="topSearch" placeholder="Search" value="<%= params[:q] if !params[:q].nil? %>" />
+          </form>
         </div>
+        <% end %>
+
+
+        <ul class="nav nav-pills pull-right" style="margin-left:0px">
+          <li id="menuopttog" class="dropdown">
+            <div id="meoptmenu" data-toggle="dropdown">
+              <div class="droparr">
+              </div>
+            </div>
+
+            <ul class="dropdown-menu" style="margin-top:2px;margin-right:-6px">
+              <li>
+                <a href="/editinfo">Edit Info</a>
+              </li>
+              <li>
+                <%= link_to "Logout", destroy_teacher_session_path, :method => :delete %>
+              </li>
+              <% if current_teacher.admin %>
+                <li>
+                  <%= link_to "Admin Panel", "/admin" %>
+                </li>
+              <% end %>
+            </ul>
+          </li>
+        </ul>
+
+        <div class="menusplitter"></div>
+
+        <a href="/">
+          <div id="nav-tags">
+            <div class="fname">Home</div>
+          </div> 
+        </a>
+
+        <div class="menusplitter"></div>
+
+        <a href="/<%= current_teacher.username %>">
+          <div id="nav-tags">
+            <img src="<%= teacher_thumb_sm(current_teacher) %>" class="myprofpic" />
+            <div class="fname"><%= current_teacher.full_name %></div>
+          </div>
+        </a>
+        
+      <% else %>
+
+        <ul class="nav nav-pills pull-right">
+          <li><a href="/" class="publink">Home</a></li>
+          <li><a href="/about" class="publink">About</a></li>
+          <li><a href="/pioneers" class="publink">Pioneers</a></li>
+          <li><a href="/about/team" class="publink">Team Claco</a></li>
+
+          <li class="dropdown">
+
+            <button data-toggle="dropdown" class="btn top-notch-btn notch-login">Sign in</button>
+            <ul class="dropdown-menu noclose">
+              <%= form_for("teacher", :url => teacher_session_path) do |f| %>
+                <%= f.text_field :login, :class => "span3 login-focus", :placeholder => "Username / Email" %>
+                
+                <%= f.password_field :password, :class => "span3", :placeholder => "Password" %>
+                
+                <div style="font-size:10px; float:left; margin-top:8px">
+                  <a href="<%= new_password_path('teacher') %>">Forgot your password?</a>
+                </div>
+                <button type="submit" class="btn" style="float:right">Sign in</button>
+              <% end %>
+
+              <div style="clear:both"></div>
+            </ul>
+          </li>
+        </ul>
+
+      <% end %>
+
       </div>
     </div>
+  </div>
+</div>
 
-    <div class="async-pop alert"></div>
+<div class="async-pop alert"></div>
