--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,7 +11,7 @@
 <%= form_for(resource, :as => resource_name, :url => teacher_password_path, :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <label>Enter your email address or username:</label><%= f.text_field :login, :style => "margin-top:10px;margin-bottom:10px", :id => "forgot_user" %>
+  <label>Enter your email address or username:</label><%= f.text_field :login, :style => "margin-top:10px;margin-bottom:10px", :id => "forgot_user", :value => params[:user] %>
 
   <div><%= f.submit "Reset my password", :class => "btn btn-primary", :style => "font-weight:bolder" %></div>
 <% end %>
