--- a/app/assets/javascripts/home/pub.js.erb
+++ b/app/assets/javascripts/home/pub.js.erb
@@ -12,7 +12,7 @@ $(document).ready(function() {
 
 	$('a#forgot_link').one('click', function /* prefillForgotPage */ (e){
 		e.preventDefault();
-		var username = $('input#user-info').val();
+		var username = $(this).parent().find('input#user-info').val() || $('input#user-info').val();
 		var link = $(this).attr('href');
 		$('a#forgot_link').attr('href', link+'?user='+username);
 		// $('a#forgot_link').click();
