--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,30 +1,19 @@
-<tr>
-  <td style="padding: 30px 0 30px 60px;" colspan="2">
-    <h1 style="padding:0; margin:0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a;">
-      You're finally here!
-    </h1>
-  </td>
-</tr>
-
-<tr>
-  <td style="padding: 2em 1em 0 6em;vertical-align:top;" align="center">
-    <a href="http://www.claco.com/eric">
-      <img src="http://i.imgur.com/0Zb6S.jpg" style="max-width:165px;"/>
-    </a>
-  </td>
-  <td style="padding: 10px 60px 0 25px; width: 260px;" >
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+<head>
+    <title></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
     Hi <%= @username %>,<br />
     <br/>
     Thanks again for joining us, we hope you love our new site. Here are some tips to get the most out of your Claco experience:<br />
-    <ol style='padding-left: 5px'>
-      <li><a href="http://www.claco.com/editinfo">Upload a profile picture and add your info!</a></li><br/>
-      <li><a href="http://www.claco.com/">Create your first binder</a></li><br/>
-      <li><a href="http://www.claco.com/educators">Subscribe to teachers just like you!</a></li><br/>
-    </ol>
+      <a href="http://www.claco.com/editinfo">Upload a profile picture and add your info!</a><br/>
+      <a href="http://www.claco.com/">Create your first binder</a><br/>
+      <a href="http://www.claco.com/educators">Subscribe to teachers just like you!</a><br/>
     United we teach!<br/>
     <br/>
     Eric Simons <br />
     CEO - Claco
-    <br />
-  </td>
-</tr>
+</body>
+</html>
