final goodies banner
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/assets/stylesheets/home/pub/about.css.erb
+++ b/app/assets/stylesheets/home/pub/about.css.erb
@@ -13,7 +13,7 @@
 }
 
 .goodies {
-  background-image: url('<%= asset_path "public/product/goodies1.jpg" %>');
+  background-image: url('<%= asset_path "public/goodies/goodies.jpg" %>');
 }
 
 .bookmarklet {
