explore-detail styling

--- a/app/assets/stylesheets/home/pub/explore.css.erb
+++ b/app/assets/stylesheets/home/pub/explore.css.erb
@@ -1,3 +1,44 @@
+.profile-avatar-wrap {
+  border-radius: 4px;
+  border: 1px solid #d6d6d6;
+  padding: 3px;
+  height: 48px;
+  background: #000;
+}
+
+.snapbtn {
+  width: 130px;
+  font-size: 10px;
+  font-weight:bolder;
+  float: right;
+}
+
+.snapbtn img {
+  float:left;
+  height:16px;
+}
+
+.description: {
+  display: inline;
+  float: right;
+}
+
+.description h3{
+  font-size: 24px;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.profile: {
+  margin-top: 10px;
+  width: 150px;
+}
+
+.profile img {
+  float: left;
+  margin-right: 10px;
+}
+
 .splashback {
   background-repeat:no-repeat;
   background-position:center top; 
@@ -8,19 +49,7 @@
   margin-bottom:10px;
 }
 
-.apple {
-  background-image: url('<%= asset_path "public/product/applefinal.jpg" %>');
-}
-
-.goodies {
-  background-image: url('<%= asset_path "public/goodies/goodies.jpg" %>');
-}
-
-.bookmarklet {
-  font-size: 15px;
-}
-
-.splashback .tagline {
+.tagline {
   font-size:32px;
   font-weight:bolder;
   color:#fff;
@@ -28,7 +57,6 @@
   text-shadow: 0px 1px 1px #000;
   line-height: 1.1em;
 }
-
 
 .sectr {
   margin-top:20px;
@@ -44,8 +72,9 @@
 }
 
 .sectr .imgbox{
-  width:400px;
-  padding:2px 3px;
+  width: 30%;
+  height: 250px;
+  padding: 2px 3px;
   background:#777;
 
   -webkit-border-radius: 6px;
@@ -54,7 +83,7 @@
 }
 
 .sectr .imgbox img{
-  width:400px;
+  width: 250px;
   height:250px;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
