--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    Hi <%= @username %>,<br />
+    Hi <%= @name %>,<br />
     <br/>
     Thanks again for joining us, we hope you love our new site. Here are some tips to get the most out of your Claco experience:<br />
       <a href="http://www.claco.com/editinfo">Upload a profile picture and add your info!</a><br/>
