--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -11,8 +11,10 @@
 				Find, build and share resources with teachers across the hall or across the world — aligned with <%= render 'layouts/commoncorelogo' %>
 
 				<div style="margin-top:20px;margin-bottom:5px;height:50px">
-					<a href="/about" style="position:absolute;padding:15px 15px 15px 30px;text-decoration:underline">Learn more</a>
-					<a href="/apply" id="apply-btn" class="btn" style="float:right">We're in beta - request an invite!</a>
+					<a href="/apply" id="apply-btn" class="btn" style="float:left">Request an invite!</a>
+					<!-- <a href="/about" style="position:absolute;padding:15px 15px 15px 30px;text-decoration:underline">Learn more</a> -->
+					<p style="position:absolute;padding:15px 15px 15px 30px;">Or</p>
+					<a href="/apply" id="apply-btn" class="btn" style="float:right">Nominate a Teacher!</a>
 				</div>
 
 			</div>
