--- a/app/views/user_mailer/invite_nag.html.erb
+++ b/app/views/user_mailer/invite_nag.html.erb
@@ -7,12 +7,12 @@
 <body>
 Hi there!<br />
 <br/>
-We noticed that you have gotten an invite to join our exclusive beta for Claco but haven't created your account yet.<br/>
+We noticed that you received an invite to join our exclusive beta for Claco but haven't created your account yet.<br/>
 Sign up quick before your link expires!</br>
 <br />
 <%= link_to @link, @link %><br />
 <br />
-We hope to see you soon on our learning network!
+We're excited to have you be a part of our network of great educators!
 <br />
 -Team Claco
 </body>
