--- a/app/views/user_mailer/request_invite.html.erb
+++ b/app/views/user_mailer/request_invite.html.erb
@@ -5,16 +5,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-Hey there,<br />
+Hi there,
+Eric here from Claco! I just wanted to let you know that we received your request for a beta invite and you will hear back from us within 5 business days.
+<br /><br />
+If you have any questions at all, please do not hesitate to email me at eric@claco.com or call us at 650-353-7642. We'd love to hear from you. <br/>
 <br/>
-I want to personally thank you for registering for an invite on Claco. We are very excited to have you be a part of our platform and look 
-forward to working with you in helping to find and share your learning content. <br/>
-<br/>
-If you have any questions at all, please do not hesitate to email me at eric@claco.com or call us at 908-248-2156. We'd love to hear from you. <br/>
-<br/>
-Best, <br />
+Sincerely, <br />
 Eric Simons <br />
-CEO - Claco
-<br />
 </body>
 </html>
