Facebox pjax broken fix
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -210,7 +210,7 @@
                 <div style="clear:both"></div>
               </div>
             </div>
-            <div id="other-addarea" class="add-area tagenter" <%= boxvis(@tagset) %>
+            <div id="other-addarea" class="add-area tagenter" <%= boxvis(@tagset) %>>
               <input type="text" class="add-field other-addfield" placeholder="Ex: 'Civil War', 'edchat'" />
               <div class="empty-auto-hold">Hit enter to add tag...</div>
             </div>
