--- a/app/assets/stylesheets/home/public.css.erb
+++ b/app/assets/stylesheets/home/public.css.erb
@@ -47,11 +47,30 @@
 
 }
 
+.addtl .action-items {
+  margin-top: 20px;
+  margin-bottom: 5px;
+  height: 50px;
+}
 
+.addtl .action-items p {
+  display: inline;
+  margin-left: 15px;
+  font-size: 15px;
+  margin-right: 10px;
+}
+
+.action-items .nominate-btn {
+  font-size: 16px;
+  padding: 8px 15px;
+  color: #333;
+  font-weight: bold;
+  text-shadow: 0 1px 0 #EEE;
+}
 
 .splashback .sectright {
   float: right;
-  width:360px;
+  width: 360px;
 }
 
 
