--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -30,7 +30,7 @@
 					Collaborate with educators across the hall or across the globe.
 				</div>
 
-				You're no longer alone. Team up with great educators just like you and build lessons in real time, ask questions & share your rockstar teaching skills. Let the collaboration begin!
+				You're no longer alone. Team up with great educators just like you and build lessons in real time, ask questions &amp; share your rockstar teaching skills. Let the collaboration begin!
 
 			</div>
 
@@ -52,7 +52,7 @@
 					One place to store all of your resources.
 				</div>
 
-				We all know the nightmare of storing class materials in multiple bookmarking & file sharing sites. Claco allows you to store, and easily access, all of your websites, videos, files & more all in one place. You can even align resources with the <%= image_tag('public/core.png', :style => "margin: -2px 3px 0 0;width:130px") %>.
+				We all know the nightmare of storing class materials in multiple bookmarking &amp; file sharing sites. Claco allows you to store, and easily access, all of your websites, videos, files &amp; more all in one place. You can even align resources with the <%= image_tag('public/core.png', :style => "margin: -2px 3px 0 0;width:130px") %>.
 			</div>
 
 
