--- a/app/assets/stylesheets/home/pub/explore.css.erb
+++ b/app/assets/stylesheets/home/pub/explore.css.erb
@@ -1,44 +1,3 @@
-.profile-avatar-wrap {
-  border-radius: 4px;
-  border: 1px solid #d6d6d6;
-  padding: 3px;
-  height: 48px;
-  background: #000;
-}
-
-.snapbtn {
-  width: 130px;
-  font-size: 10px;
-  font-weight:bolder;
-  float: right;
-}
-
-.snapbtn img {
-  float:left;
-  height:16px;
-}
-
-.description: {
-  display: inline;
-  float: right;
-}
-
-.description h3{
-  font-size: 24px;
-  margin-top: 30px;
-  margin-bottom: 10px;
-}
-
-.profile: {
-  margin-top: 10px;
-  width: 150px;
-}
-
-.profile img {
-  float: left;
-  margin-right: 10px;
-}
-
 .splashback {
   background-repeat:no-repeat;
   background-position:center top; 
@@ -49,17 +8,21 @@
   margin-bottom:10px;
 }
 
-.tagline {
+.explore {
+  background-image: url('<%= asset_path "public/explore/splash.jpg" %>');
+}
+
+.splashback .tagline {
   font-size:32px;
   font-weight:bolder;
   color:#fff;
   margin:35px 0 0 0;
-  text-shadow: 0px 1px 1px #000;
+  text-shadow: 1px 2px 3px #222;
   line-height: 1.1em;
 }
 
 .sectr {
-  margin-top:20px;
+  margin-top:-80px;
   padding:15px;
   background:#fff;
 
@@ -71,66 +34,53 @@
           border-radius: 6px;
 }
 
-.sectr .imgbox{
-  width: 30%;
-  height: 250px;
-  padding: 2px 3px;
-  background:#777;
-
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
+legend ul.nav {
+  float:right;
+  font-size:.6em;
 }
 
-.sectr .imgbox img{
-  width: 250px;
-  height:250px;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
+.nav li.disabled {
+  margin-right:2em;
+  line-height:2.8;
 }
 
-.sectr .text {
-  color:#777;
-  text-shadow: 0px 0px 1px #fff;
-  line-height: 1.2em;
-  font-size:16px;
+.sectr .caption {
+  padding: 8px 24px;
+  text-align: right;
+  background-color: #08c;
+  color: #eee;
+  margin-top: 4px;
+
+  -webkit-transition: background 0.2s ease-out;
+     -moz-transition: background 0.2s ease-out;
+       -o-transition: background 0.2s ease-out;
+          transition: background 0.2s ease-out;
 }
 
-.sectr .headtext {
-  color:#666;
-  margin-top:10px;
-  margin-bottom:10px;
-  font-weight:bolder;
-  font-size:24px;
-  line-height: 1.1em;
+a.thumbnail {
+  cursor: pointer;
 }
 
-.buttoners {
-  margin-top:40px;
-  padding:20px;
-  border:6px dotted #ccc;
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
+a.thumbnail:hover {
+  text-decoration: none;
 }
 
-.buttoners .hearter {
-  text-align:center;
-  font-size:40px;
-  margin-top:10px;
-  margin-bottom:30px;
-  font-weight:bolder;
+a.thumbnail:hover h4::after {
+  content: " →";
 }
 
-.buttoners a {
-  padding: 30px 50px;
-  font-weight:bolder;
-  font-size:20px;
-  margin-right:10px;
+a.thumbnail:hover h4 {
+  background-color: #222;
 }
 
 hr {
   border:none !important;
   margin-top:40px;
+}
+
+.hidden {
+  display: none;
+  height: 0;
+  width: 0;
+  visibility: hidden;
 }
