--- a/app/assets/stylesheets/home/public.css.erb
+++ b/app/assets/stylesheets/home/public.css.erb
@@ -48,24 +48,35 @@
 }
 
 .addtl .action-items {
-  margin-top: 20px;
+  display: inline-block;
+  margin-top: 10px;
   margin-bottom: 5px;
-  height: 50px;
+  margin-left: 50px;
 }
 
 .addtl .action-items p {
-  display: inline;
-  margin-left: 15px;
-  font-size: 15px;
-  margin-right: 10px;
+  margin-top: 10px;
+  font-size: 16px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .action-items .nominate-btn {
-  font-size: 16px;
+  margin-left: 5px;
+  font-size: 14px;
+  display: inline;
   padding: 8px 15px;
   color: #333;
   font-weight: bold;
   text-shadow: 0 1px 0 #EEE;
+}
+
+#nominate-form {
+  display: inline;
+}
+
+#nominate-form input[type=email]:last-of-type {
+  opacity: 0.4;
 }
 
 .splashback .sectright {
@@ -217,6 +228,7 @@
 
 
 #apply-btn {
+  margin-top: -20px;
   font-size:18px;
   padding: 15px 20px;
   color:#fff;
