emails cleaned up and finalized
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -13,7 +13,6 @@
       <a href="http://www.claco.com/educators">Subscribe to teachers just like you!</a><br/>
     United we teach!<br/>
     <br/>
-    Eric Simons <br />
-    CEO - Claco
+    Eric Simons
 </body>
 </html>
