--- a/app/assets/stylesheets/home/public.css.erb
+++ b/app/assets/stylesheets/home/public.css.erb
@@ -11,8 +11,6 @@
 }
 
 
-
-
 .splashback .sectleft {
   width:540px;
   float:left;
@@ -49,30 +47,37 @@
 
 .addtl .action-items {
   display: inline-block;
-  margin-top: 10px;
-  margin-bottom: 5px;
-  margin-left: 50px;
+  float: right;
+  margin-right: 40px;
 }
 
 .addtl .action-items p {
-  margin-top: 10px;
+  margin-top: 15px;
   font-size: 16px;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .action-items .nominate-btn {
-  margin-left: 5px;
-  font-size: 14px;
-  display: inline;
-  padding: 8px 15px;
+  margin: 0px auto;
+  font-size: 12px;
+  display: block;
+  padding: 5px;
   color: #333;
   font-weight: bold;
   text-shadow: 0 1px 0 #EEE;
+  width: 65%;
 }
 
 #nominate-form {
   display: inline;
+}
+
+input.invite-email {
+  width: 95%;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 #nominate-form input[type=email]:last-of-type {
@@ -228,7 +233,7 @@
 
 
 #apply-btn {
-  margin-top: -20px;
+  margin-top: 20px;
   font-size:18px;
   padding: 15px 20px;
   color:#fff;
