--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -124,7 +124,7 @@
 	<div style="clear:both"></div>
 </div>
 
-<div id="nominate-form">
+<div id="nominate-form" >
   <div class="headtitle">
 		Share the love! 
   </div>
@@ -134,11 +134,11 @@
   <form action="#" class="bodcon">
     <h3 style="font-size:11px;"> Leave your name so (s)he can thank you:</h3>
 
-    <input name="nominater" maxlength="50" class="firstfocus" style="width:300px" type="text" placeholder="Your full name" />
+    <input maxlength="50" class="firstfocus invite-email" type="text" placeholder="Your full name" />
 
 		<h3 style="font-size:11px;"> Invite Teachers to our exclusive beta!</h3> 
-    <input name="invite[]" maxlength="50" class="invite_" style="width:300px" type="email" placeholder="Enter an awesome teacher's email!" value=""/>
-    <input name="invite[]" maxlength="50" class="invite_" style="width:300px" type="email" placeholder="Enter an awesome teacher's email!" value=""/>
+    <input maxlength="50" class="invite-email" type="email" placeholder="Enter an awesome teacher's email!" value=""/>
+    <input maxlength="50" class="invite-email" type="email" placeholder="Enter an awesome teacher's email!" value=""/>
 
     <div class="buttonbar">
        <button class="btn btn-primary showloader" type="submit">Send Nomination!</button>
