--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -6,10 +6,17 @@
 				Collaborate with the world's greatest educators.
 			</div>
 
+			<h2 id='tagline2'>
+				Find, build and share resources with teachers across the hall or across the world — aligned with Common Core
+				<a href="/about" id="learn-more">Learn more &rarr;</a>
+			</h2>
+
+
 			<div class="addtl">
-				Find, build and share resources with teachers across the hall or across the world — aligned with <%= render 'layouts/commoncorelogo' %>
-					<a href="/apply" id="apply-btn" class="btn">Sign up for our Beta!</a>
-				<div class='action-items'>
+				<!-- Find, build and share resources with teachers across the hall or across the world — aligned with <%= render 'layouts/commoncorelogo' %> -->
+				<a href="/apply" id="apply-btn" class="btn">Sign up for our Beta!</a>
+				<span class='separator'>&nbsp;</span>		
+				<div class="action-items">
 					<p>Know a great educator?</p>
 					<!-- <a href="/about" style="padding:15px 15px 15px 30px;text-decoration:underline">Learn more</a> -->
 					<a class="btn nominate-btn">Send them an invite</a>
@@ -124,7 +131,7 @@
 	<div style="clear:both"></div>
 </div>
 
-<div id="nominate-form" >
+<div id="nominate-form" style="display: none;">
   <div class="headtitle">
 		Share the love! 
   </div>
