Explore final mockup
Signed-off-by: Diwank Singh <singh@diwank.name>

--- a/app/assets/javascripts/home/explore.js.erb
+++ b/app/assets/javascripts/home/explore.js.erb
@@ -1,13 +1,17 @@
 $(document).ready(function() {
 
-	$('legend .nav a').click(function /*tabchanger*/(e){
+	$('legend .nav a').click(function /* tabchanger */ (e){
 		e.preventDefault();
 		
 		var parent = $(this).closest('li'),
 		    tabid = $(this).data('target');
-		parent.addClass('active').siblings().removeClass('active');
+		parent.addClass('active')
+			  .siblings()
+			  .removeClass('active');
 
-		$('.tabcontent').addClass('hidden').filter('div[data-tabid='+tabid+']').removeClass('hidden');
+		$('.tabcontent').addClass('hidden')
+						.filter('div[data-tabid='+tabid+']')
+						.removeClass('hidden');
 	});
 
 });
