--- a/app/views/home/explore_detail.html.erb
+++ b/app/views/home/explore_detail.html.erb
@@ -1,42 +1,80 @@
 <% content_for :headcon do %>
-    <%= stylesheet_link_tag "home/pub/explore", :media => "all" %>
+    <%= stylesheet_link_tag "home/pub/explore_detail", :media => "all" %>
 <% end %>
 
-  <div class="container">
-    <div class="tagline">
-      Explore Claco: Math
-    </div>
-  </div>
+<div class="container" style="margin-top:1em;">
+  <div class="sectr">
+    <legend><a href="/explore">Explore</a> &raquo; Math</legend>
+    <a class="item">
+      <img src="http://placekitten.com/g/200/150" class="scrnshot" />
 
-<div class="container">
-  <div class="sectr" style="margin-top: 10px">
-    <div class="imgbox" style="float:left;margin-right:30px">
-    </div>
+      <div class="description">
+        <h3>
+          Title of the binder n shit
+        </h3>
 
-    <div class="description">
-      <h3>
-        Title of the binder n shit
-      </h3>
+        <p>
+          Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical.
+        </p>
 
-      <p>
-        Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical.
-      </p>
-
-      <button class="btn snapbtn">
-        <%= image_tag "binders/snap.png" %>
-        <div class="texter">Snap to binder</div>
-      </button>
+        <button class="btn snapbtn">
+          <%= image_tag "binders/snap.png" %>
+          <div class="texter">Snap to binder</div>
+        </button>
+      </div>
       
       <div class="profile">
-        <img class="profile-avatar-wrap" src="http://img.cla.co/2912c37d04ad62de2099657014ead6a8/thumb_lg.png">
-        <h4>
-          William King
-        </h4>
-        <p>
-          I'm a king NS. Blahblah blah figure shit out. asldfjalsjdflj asdlfja;lsjdf a;lsdjf;lajsdf
-        </p>
+        <img class="profile-avatar" src="http://img.cla.co/2912c37d04ad62de2099657014ead6a8/thumb_lg.png" />
+        <strong class="profile-name">William King</strong>
       </div>
-    </div>
-    <div style="clear:both"></div>
+    </a>
+    
+    <a class="item">
+      <img src="http://placekitten.com/g/200/150" class="scrnshot"/>
+
+      <div class="description">
+        <h3>
+          Title of the binder n shit
+        </h3>
+
+        <p>
+          Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical.
+        </p>
+
+        <button class="btn snapbtn">
+          <%= image_tag "binders/snap.png" %>
+          <div class="texter">Snap to binder</div>
+        </button>
+      </div>
+      
+      <div class="profile">
+        <img class="profile-avatar" src="http://img.cla.co/2912c37d04ad62de2099657014ead6a8/thumb_lg.png"/>
+        <strong class="profile-name">William King</strong>
+      </div>
+    </a>
+    
+    <a class="item">
+      <img src="http://placekitten.com/g/200/150" class="scrnshot"/>
+
+      <div class="description">
+        <h3>
+          Title of the binder n shit
+        </h3>
+
+        <p>
+          Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical.
+        </p>
+
+        <button class="btn snapbtn">
+          <%= image_tag "binders/snap.png" %>
+          <div class="texter">Snap to binder</div>
+        </button>
+      </div>
+      
+      <div class="profile">
+        <img class="profile-avatar" src="http://img.cla.co/2912c37d04ad62de2099657014ead6a8/thumb_lg.png"/>
+        <strong class="profile-name">William King</strong>
+      </div>
+    </a>
   </div>
 </div>
