--- a/app/views/explore/showissue.html.erb
+++ b/app/views/explore/showissue.html.erb
@@ -9,13 +9,13 @@ No categories have been made yet
 <tr>
 <td>Subject</td>
 <td># Binders</td>
-<td>Remove subject</td>
+<td>Remove Category</td>
 </tr>
 <% @issue.categories.each do |category| %>
 <tr>
-<td><%= category.subject %></td>
+<td><%= link_to("#{category.name}", admin_explore_categories_path(params[:issue], category.name)) %></td>
 <td><%= category.binders.count %></td>
-<td>remove link</td>
+<td><%= link_to("Remove Category", admin_explore_categories_path(params[:issue], category.name), :method => :delete) %></td>
 </tr>
 <% end %>
 </table>
@@ -23,7 +23,7 @@ No categories have been made yet
 <br />
 <br />
 <%= form_for Category.new, url: admin_explore_issue_path do |f| %>
-	<%= f.label :subject, "Category" %>
-	<%= f.text_field :subject %>
+	<%= f.label :name, "Category" %>
+	<%= f.text_field :name %>
 	<%= f.submit "add" %>
 <% end %>
