--- a/app/assets/stylesheets/devise/newuser.css
+++ b/app/assets/stylesheets/devise/newuser.css
@@ -4,7 +4,7 @@
 	margin-top:30px;
 	padding:20px;
 	margin-bottom:10px;
-  width:400px;
+  width: 330px;
 
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
@@ -15,6 +15,20 @@
   box-shadow: 0 1px 3px rgba(34,25,25,0.3);
 
   background: #fff;
+}
+
+.login-info {
+  width: 95%;
+}
+
+.login-btn {
+ font-weight: bolder;
+ margin-top: 10px; 
+}
+#forgot_link {
+  float: right;
+  font-size: 10px;
+  padding-right: 10px;
 }
 
 .labeler {
