explore detail functionality
Signed-off-by: Diwank Singh <diwank.singh@gmail.com>

--- a/app/assets/stylesheets/home/pub/explore_detail.css.erb
+++ b/app/assets/stylesheets/home/pub/explore_detail.css.erb
@@ -5,6 +5,7 @@
 
 .profile-name {
   line-height: 32px;
+  font-weight: bold;
 }
 
 .snapbtn {
@@ -28,6 +29,10 @@
   font-size: 20px;
   /*margin-top: 30px;*/
   margin-bottom: 10px;
+}
+
+legend small {
+  float: right;
 }
 
 .profile: {
@@ -118,7 +123,7 @@
   width: 95%;
   margin: 0 auto;
   padding: 1.2em 1.8em;
-  display: inline-block;
+  display: block;
 
   color: #222;
   border-bottom: 1px dotted #ddd;
@@ -137,6 +142,8 @@
 .item > img.scrnshot {
   border-radius: 2px;
   border: 1px solid #999;
+  background-color: white;
+
   padding: 6px;
   margin-right: 1.2em;
   width: 200px;
