--- a/app/views/home/explore_detail.html.erb
+++ b/app/views/home/explore_detail.html.erb
@@ -2,79 +2,86 @@
     <%= stylesheet_link_tag "home/pub/explore_detail", :media => "all" %>
 <% end %>
 
+<% content_for :botcon do %>
+    <%= javascript_include_tag "home/explore_detail", :media => "all" %>
+<% end %>
+
 <div class="container" style="margin-top:1em;">
   <div class="sectr">
-    <legend><a href="/explore">Explore</a> &raquo; Math</legend>
-    <a class="item">
+    <legend>
+      <a href="/explore">Explore</a> &raquo; Math
+      <small><em>Do you see a little Asian child with a blank expression?</em></small>
+    </legend>
+    <div class="item" data-binder-id="5088356bd9ade5069000002c" data-href="http://localhost:5000/diwank/portfolio/hello-world/5088356bd9ade5069000002c">
       <img src="http://placekitten.com/g/200/150" class="scrnshot" />
 
       <div class="description">
-        <h3>
-          Title of the binder n shit
-        </h3>
+        <h3>Title of the binder n shit</h3>
 
         <p>
           Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical.
         </p>
 
+      </div>
+      
+      <div class="profile">
+        <a class="profile-name" href=".">
+          <img class="profile-avatar" src="http://img.cla.co/2912c37d04ad62de2099657014ead6a8/thumb_lg.png" />
+          William King
+        </a>
         <button class="btn snapbtn">
           <%= image_tag "binders/snap.png" %>
           <div class="texter">Snap to binder</div>
         </button>
       </div>
-      
-      <div class="profile">
-        <img class="profile-avatar" src="http://img.cla.co/2912c37d04ad62de2099657014ead6a8/thumb_lg.png" />
-        <strong class="profile-name">William King</strong>
-      </div>
-    </a>
+    </div>
     
-    <a class="item">
+    <div class="item" data-binder-id="5088356bd9ade5069000002c" data-href="http://localhost:5000/diwank/portfolio/hello-world/5088356bd9ade5069000002c">
       <img src="http://placekitten.com/g/200/150" class="scrnshot"/>
 
       <div class="description">
-        <h3>
-          Title of the binder n shit
-        </h3>
+        <h3>Title of the binder n shit</h3>
 
         <p>
           Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical.
         </p>
 
+      </div>
+      
+      <div class="profile">
+        <a class="profile-name" href=".">
+          <img class="profile-avatar" src="http://img.cla.co/2912c37d04ad62de2099657014ead6a8/thumb_lg.png"/>
+          William King
+        </a>
         <button class="btn snapbtn">
           <%= image_tag "binders/snap.png" %>
           <div class="texter">Snap to binder</div>
         </button>
       </div>
-      
-      <div class="profile">
-        <img class="profile-avatar" src="http://img.cla.co/2912c37d04ad62de2099657014ead6a8/thumb_lg.png"/>
-        <strong class="profile-name">William King</strong>
-      </div>
-    </a>
+    </div>
     
-    <a class="item">
+    <div class="item" data-binder-id="5088356bd9ade5069000002c" data-href="http://localhost:5000/diwank/portfolio/hello-world/5088356bd9ade5069000002c">
       <img src="http://placekitten.com/g/200/150" class="scrnshot"/>
 
       <div class="description">
-        <h3>
-          Title of the binder n shit
-        </h3>
+        <h3>Title of the binder n shit</h3>
 
         <p>
           Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical.
         </p>
 
+      </div>
+      
+      <div class="profile">
+        <a class="profile-name" href=".">
+          <img class="profile-avatar" src="http://img.cla.co/2912c37d04ad62de2099657014ead6a8/thumb_lg.png"/>
+          William King
+        </a>
         <button class="btn snapbtn">
           <%= image_tag "binders/snap.png" %>
           <div class="texter">Snap to binder</div>
         </button>
       </div>
-      
-      <div class="profile">
-        <img class="profile-avatar" src="http://img.cla.co/2912c37d04ad62de2099657014ead6a8/thumb_lg.png"/>
-        <strong class="profile-name">William King</strong>
-      </div>
-    </a>
+    </div>
   </div>
 </div>
