--- a/app/assets/javascripts/home/explore.js.erb
+++ b/app/assets/javascripts/home/explore.js.erb
@@ -1,10 +1,14 @@
+/**
+* @authors: diwank
+*/
 $(document).ready(function() {
 
-	$('legend .nav a').click(function /* tabchanger */ (e){
+	$('legend .nav a').click(function /* tabchanger */ (e){		
 		e.preventDefault();
 		
 		var parent = $(this).closest('li'),
 		    tabid = $(this).data('target');
+		
 		parent.addClass('active')
 			  .siblings()
 			  .removeClass('active');
