--- a/app/views/home/explore.html.erb
+++ b/app/views/home/explore.html.erb
@@ -32,19 +32,19 @@
 			<div class="row-fluid">
 	            <ul class="thumbnails">
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail label</h4>
 	                </a>
 	              </li>
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail label</h4>
 	                </a>
 	              </li>
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail shit</h4>
 	                </a>
@@ -54,13 +54,13 @@
 	        <div class="row-fluid">
 	            <ul class="thumbnails">
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail label</h4>
 	                </a>
 	              </li>
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail label</h4>
 	                </a>
@@ -73,19 +73,19 @@
 			<div class="row-fluid">
 	            <ul class="thumbnails">
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail label</h4>
 	                </a>
 	              </li>
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail label</h4>
 	                </a>
 	              </li>
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail shit</h4>
 	                </a>
@@ -98,19 +98,19 @@
 			<div class="row-fluid">
 	            <ul class="thumbnails">
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail label</h4>
 	                </a>
 	              </li>
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail label</h4>
 	                </a>
 	              </li>
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail shit</h4>
 	                </a>
@@ -120,19 +120,19 @@
 	        <div class="row-fluid">
 	            <ul class="thumbnails">
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail label</h4>
 	                </a>
 	              </li>
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail label</h4>
 	                </a>
 	              </li>
 	              <li class="span4">
-	                <a class="thumbnail">
+	                <a class="thumbnail" href="detail">
 	                  <img src="http://placekitten.com/g/300/200" alt="">
 	                  <h4 class="caption">Thumbnail label</h4>
 	                </a>
