--- a/app/views/home/explore.html.erb
+++ b/app/views/home/explore.html.erb
@@ -10,8 +10,8 @@
 	<div class="container">
 
 		<div class="tagline">
-			Save time &amp; focus on what you do best — educating.<br /><br />
-			Meet your new learning ne.
+			Discover what Educators are building<br /><br />
+			Tomorrow's lesson is here!
 		</div>
 
 	</div>
@@ -19,7 +19,7 @@
 
 <div class="container">
 	<div class="sectr">
-		<legend>Explore
+		<legend>Explore Claco
 			<ul class="nav nav-pills">
               <li class="disabled">Browse by:</li>
               <li class="active"><a href="#" data-target="subjects">Subjects</a></li>
