--- a/app/views/home/explore.html.erb
+++ b/app/views/home/explore.html.erb
@@ -10,7 +10,8 @@
 	<div class="container">
 
 		<div class="tagline">
-			Discover what Educators are building<br /><br />
+			Discover what educators are building today.
+			<br/>
 			Tomorrow's lesson is here!
 		</div>
 
