abbreviates last name for binder view

--- a/app/views/layouts/_breadcrumbs.html.erb
+++ b/app/views/layouts/_breadcrumbs.html.erb
@@ -7,7 +7,7 @@
           <img src="<%= teacher_thumb_lg(@owner) %>" />
         </a>
         <div class="info">
-          <a href="/<%= @binder.username %>" class="namester"><%= "#{@binder.fname} #{@binder.lname}" %></a>
+          <a href="/<%= @binder.username %>" class="namester"><%= "#{@binder.fname} #{@binder.lname[0]}." %></a>
         </div>
       </div>
       
