--- a/app/views/explore/editissue.html.erb
+++ b/app/views/explore/editissue.html.erb
@@ -22,6 +22,7 @@ No categories have been made yet
 <% end %>
 <br />
 <br />
+<%= link_to("Preview Issue", preview_issue_path(params[:issue])) %>
 <%= form_for Category.new, url: admin_explore_issue_path do |f| %>
 	<%= f.label :name, "Category" %>
 	<%= f.text_field :name %>
