--- a/app/assets/stylesheets/home/pub/explore_detail.css.erb
+++ b/app/assets/stylesheets/home/pub/explore_detail.css.erb
@@ -134,7 +134,7 @@ legend small {
 }
 
 .item:hover {
-  background-color: #eee;
+  background-color: #eef;
   cursor: pointer;
   text-decoration: none;
 }
@@ -157,4 +157,8 @@ legend small {
 
 .profile {
   /*float: right;*/
+}
+
+.pickerpane {
+  z-index: 1;
 }
