--- a/app/views/home/explore_detail.html.erb
+++ b/app/views/home/explore_detail.html.erb
@@ -85,3 +85,97 @@
     </div>
   </div>
 </div>
+
+   <div id="snap-form" style="display:none">
+    <div class="headtitle">
+      Snap to binder
+    </div>
+
+    <div class="errorBox"></div>
+
+    <form action="#" class="bodcon" id="snap">
+      <div class="conitem">
+<!-- 
+        <div class="fol-picker" style="margin-bottom:10px">
+
+          <div class="togbar" onclick="togglePicker(this)">
+            <span class="chosenTitle">
+              <i>Choose a binder or folder to snap this to</i>
+            </span>
+            <div class="down-arrow"></div>
+            <input type="hidden" name="folid" class="chosenOne" value="" />
+          </div>
+
+          <div class="pickerpane">
+
+            <% if !@root.nil? %>
+            <% @root.each do |binder| %>
+
+
+              <% if binder.parent["id"] == "0" %>
+
+                <div class="bndr">
+
+                  <div class="dir" folid="<%= binder.id.to_s %>" turl="<%= named_binder_route(binder) %>">
+                    <div class="arrow-right" onclick="togglePickFolder(this)"></div>
+                    <span class="dirtitle" onclick="selectPickFolder(this)">
+                      <%= image_tag "binders/folder.png", :class => "foldicon" %>
+                      <%= binder.title %>
+                    </span>
+                    <div class="dirWrap"></div>
+
+                  </div>
+                </div>
+
+              <% end %>
+
+            <% end %>
+            <% end %>
+
+
+          </div>
+        </div>
+ -->
+<div style="margin-bottom:10px" class="fol-picker">
+
+          <div onclick="togglePicker(this)" class="togbar">
+            <span class="chosenTitle">
+              <i>Choose a binder or folder to snap this to</i>
+            </span>
+            <div class="down-arrow"></div>
+            <input type="hidden" value="" class="chosenOne" name="folid">
+          </div>
+
+          <div class="pickerpane">
+
+
+
+
+                <div class="bndr">
+
+                  <div turl="/diwank/portfolio/hello-world/5088356bd9ade5069000002c" folid="5088356bd9ade5069000002c" class="dir">
+                    <div onclick="togglePickFolder(this)" class="arrow-right"></div>
+                    <span onclick="selectPickFolder(this)" class="dirtitle">
+                      <img src="/assets/binders/folder.png" class="foldicon" alt="Folder">
+                      hello world
+                    </span>
+                    <div class="dirWrap"></div>
+
+                  </div>
+                </div>
+
+
+
+
+          </div>
+        </div>
+
+      </div>
+
+      <div class="buttonbar">
+         <button class="btn btn-primary showloader" type="submit" disabled="disabled">Snap this!</button>
+         <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
+      </div>
+      <input type="hidden" id="binderUrl" name="binderUrl" />
+    </form>
+  </div>
